--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 
     implementation 'com.android.support:cardview-v7:26.1.0'
+    compile 'rouchuan.viewpagerlayoutmanager:viewpagerlayoutmanager:2.0.12'
+
 }
 repositories {
     mavenCentral()
